[BOJ] 회전하는 큐 / 1021 / 실버3 / 0주차-자료구조 / C++

--- a/김채윤/.vscode/settings.json
+++ b/김채윤/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "ios": "cpp"
+        "ios": "cpp",
+        "iostream": "cpp",
+        "deque": "cpp"
     }
 }
