--- a/김채윤/.vscode/settings.json
+++ b/김채윤/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "ios": "cpp",
         "iostream": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "istream": "cpp"
     }
 }
