--- a/김채윤/.vscode/settings.json
+++ b/김채윤/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ios": "cpp",
         "iostream": "cpp",
         "deque": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "vector": "cpp"
     }
 }
