[BOJ] 재귀함수가 뭔가요? / 17478 / 실버5 / 3주차-분할정복 / C++

--- a/김채윤/.vscode/settings.json
+++ b/김채윤/.vscode/settings.json
@@ -4,6 +4,7 @@
         "iostream": "cpp",
         "deque": "cpp",
         "istream": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "stack": "cpp"
     }
 }
